<?xml version="1.0"?>
<package format="2">
  <name>zed_display_rviz</name>  <!-- 功能包名称 -->
  <version>3.0.0</version>
  <description>"zed_display_rviz" is a ROS package to visualize in Rviz the information from the "zed_wrapper" node</description>

  <maintainer email="support@stereolabs.com">STEREOLABS</maintainer>
  <license>MIT</license>

  <url type="website">http://stereolabs.com/</url>
  <url type="repository">https://github.com/stereolabs/zed-ros-display-rviz</url>
  <url type="bugtracker">https://github.com/stereolabs/zed-ros-display-rviz/issues</url>

  <!-- 构建工具依赖 -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- 运行依赖 -->
  <exec_depend>rviz</exec_depend>
  <exec_depend>rviz_imu_plugin</exec_depend>
  <exec_depend>zed_wrapper</exec_depend>
</package>
